Stripping off the idea of an uniform API response